# ece6360-cuda_2d_convolution

./: .gitignore  CMakeLists.txt  FileHandler.cu  FileHandler.cuh  Image.cu  Image.cuh  README.md  main.cu  notes.txt
